--- a/theme/play_album.html
+++ b/theme/play_album.html
@@ -46,13 +46,14 @@ div.jp-type-playlist div.jp-playlist a.jp-playlist-current {
 		<!-- audio player begin -->
 		<div id="jplayer"></div>
 		<div class="jp-audio" id="jp_container_1">
-		<h2>{song.NAME} - {song.SINGER}</h2>
+		<h2>{song.TITLE}</h2>
 		<div class="jp-type-playlist">
 			<div id="jp_interface_1" class="jp-interface">
 			<ul class="jp-controls">
 				<li><a href="#" class="jp-play"></a></li>
 				<li><a href="#" class="jp-pause"></a></li>
-				
+                <li><a href="#" class="jp-prev">Previous Track</a></li>
+                <li><a href="#" class="jp-next">Next Track</a></li>
 			</ul>
 			<div class="jp-progress">
 				<div class="jp-seek-bar">
