--- a/theme/top_album.html
+++ b/theme/top_album.html
@@ -1,6 +1,6 @@
 <!-- BEGIN list --> 
 <!-- #BEGIN list_row -->
-<img src="{song.IMG}"  alt=""> <a href="#" >{song.NAME}</a><br/><br/>
+<a title = '{song.NAME1}' href="{server}/album/{song.ID}"><img src="{song.IMG}"  alt=""></a> <a title = '{song.NAME1}' href="{server}/album/{song.ID}" >{song.NAME}</a><br/><br/>
 <!-- #END list_row -->
 <!-- END list -->
 
